test/library/standard/Reflection/field-queries-error-int.good
field-queries-error-int.chpl:6: error: int(64) is not a class, record, or union type
