test/library/standard/Reflection/field-queries-error-int.chpl
// Check that numFields() responds gracefully to an invalid argument type.
// See also: test/param/ferguson/field*

use Reflection;

param nf = numFields(int);
